styles/main.scss
///////////////////////////START HOME

body, html {
    height:100%;
    background-image:url("../images/bg.png");
    background-size:cover;
    background-repeat:no-repeat;
}

h3 {
    font-weight:lighter;
}

h2, h3 {
    color:white;
}

h2 {
    span {
        padding:2px;
        font-size:.7em;
        font-weight:lighter;
    }
}

header {
    width:100%;
    text-align:center;
}

button {
    transition:all .5 ease;
    border-radius:5px;
    color:white;
    margin:4px;
    background-color:rgba(255,255,255,.001);
}

button:hover {
    background-color:rgba(200,200,200,1)
}


.disabled {
    opacity:.4
}

.disabled:hover {
    background-color:rgba(255,255,255,.001);
}

img.bg {
  min-height: 100%;
  min-width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
  z-index:-1;
  }



 #homeLogo {
     opacity:.8;
     max-width:350px;
     height:auto;
 }

 #homeLogo:hover {
     opacity:1;
 }


.fa {
     font-size:3em;
     color:white;
     margin: 0px; margin-top: 5px; margin-right:5px;
     opacity:.6;
     text-align:center;
     transition:all .3s ease-in-out;

 }


.edit {
    font-size:1.3em;
    opacity:.8;
    transition:all .3s ease-in-out;
}

.edit:hover {
    font-size:1.5em;
    cursor:pointer;
    opacity:1;
}

.add, .del {
    font-size:1em;
    opacity:1;
}




#first:hover {
    color:#EB8921;
    transform: scale(1.2);
}
#second:hover {
    color:#FF6347;
    transform: scale(1.2);
}




 .accHead {
     overflow:auto;
     color:black;
     border:none;
     .panel {
        background-color:rgba(255,255,255,.4);
        .panel-heading {
            background-color:rgba(255,255,255,.7);

        }
     }
 }

 .container {
     overflow:auto;
     position:absolute;
     bottom:1px;
     height:60%;
     width:100%;
 }

 .homeWrap{
     font-size:1.2em;
     height:100%;
     margin-left:10%;
     margin-right:10%;
 }


////////////////////////////////END HOME

.groceryWrap{
    background-color:rgba(0,0,0,.4);
    font-size:1.3em;
    padding:10px;
    margin-left:10%;
    margin-right:10%;
    overflow:auto;
    color:white;
    .fa {
        font-size:1em;
    }
    .fa:hover {
        color:red;
    }
    input {
        width:150px;
    }
}

////////////////////////////////ADD RECIPE

.addWrap {
    width:100%;
    margin:10px;
    overflow:auto;
    ul {
        color:white;
    }
    h2 {
        text-align:center;
        text-decoration:underline;
    }

}

section {
    display:inline-block;
    width:49%;
    background-color:rgba(0,0,0,.4);
    padding:10px;
    .col1 {
        display:inline-block;
        width:230px;
        margin: 0; padding:0;
    }
    .col2 {
        display:inline-block;
        width:230px;
        margin: 0; padding:0;
        vertical-align:top;
    }

}

aside {
    display:inline-block;
    width:49%;
    background-color:rgba(0,0,0,.4);
    vertical-align:top;
    padding:10px;
    .directions {
        color:white;
        font-size:1.2em;
    }
}

input, textarea {
    background-color:rgba(0,0,0,.6);
    border:none; border-bottom:1px white solid;
    color:white;
}

select {
    background-color:rgba(255,255,255,.001);
    color:white;
}

////////////////////////////END ADDRECIPE


////////////IPHONE5
@media screen and (min-width:0) and (max-width:639px) {

     #homeLogo {
         max-width:300px;
         height:auto;
     }

     .container {
         padding-top:10px;
         height:50%;
     }

     .homeWrap{
         font-size:1.2em;
         height:100%;
         margin-left:0;
         margin-right:0;
     }

    #hidden {
        display:none;
    }
     section {
         width:100%;
     }
     aside {
         display:none;
     }

     .addWrap {
         margin:0;
     }

     .groceryWrap{

         padding:5px;
         margin-left:0;
         margin-right:0;
     }

}

